--- a/notebooks/Untitled-1.ipynb
+++ b/notebooks/Untitled-1.ipynb
@@ -121,7 +121,7 @@
     "            fingerprints (torch.Tensor): Shape [7807, 2048]\n",
     "            chembert2as (torch.Tensor): Shape [7807, 600]\n",
     "            molformers (torch.Tensor): Shape [7807, 768]\n",
-    "            labels (torch.Tensor): Shape [7807]\n",
+    "            labels (torch.Tensor): Shape [7807, 1]\n",
     "        \"\"\"\n",
     "        self.descriptors = descriptors\n",
     "        self.fingerprints = fingerprints\n",
@@ -142,14 +142,13 @@
     "        Returns:\n",
     "            dict: Dictionary containing all features and label for the sample\n",
     "        \"\"\"\n",
-    "        sample = {\n",
+    "        return {\n",
     "            'descriptors': self.descriptors[idx],\n",
     "            'fingerprints': self.fingerprints[idx],\n",
     "            'chembert2as': self.chembert2as[idx],\n",
     "            'molformers': self.molformers[idx],\n",
-    "            'label': self.labels[idx]\n",
+    "            'label': self.labels[idx],\n",
     "        }\n",
-    "        return sample\n",
     "\n",
     "# Example usage:\n",
     "def create_data_loaders(descriptors, fingerprints, chembert2as, molformers, labels, \n",
