중간고사 제출용

--- a/notebooks/중간고사_regression.ipynb
+++ b/notebooks/중간고사_regression.ipynb
@@ -17,6 +17,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "이번 중간고사에 사용된 모든 소스코드는 제 깃허브에 올려두었습니다. https://github.com/supergermy/midexam"
+      ],
+      "metadata": {
+        "id": "pS-u6ly9x0FQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Discussion\n",
         "\n",
         "* ### 프로젝트 개요\n",
